[gd_scene load_steps=7 format=3 uid="uid://dl6aph6gafpig"]

[ext_resource type="Script" path="res://scriptes/hud.gd" id="1_ht6m2"]
[ext_resource type="FontFile" uid="uid://d0d281v2wubk6" path="res://TinyUnicode.ttf" id="2_1d2hy"]
[ext_resource type="LabelSettings" uid="uid://bfinug6x7qmyh" path="res://text.tres" id="2_y1hv0"]
[ext_resource type="LabelSettings" uid="uid://tommsggnsksp" path="res://hud.tres" id="4_dbj5u"]
[ext_resource type="Texture2D" uid="uid://c7x4ly77itwtf" path="res://resources/art/close.png" id="5_08orx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rmpb"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.686275)
corner_detail = 1
anti_aliasing = false

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_ht6m2")

[node name="gamename" type="Label" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -235.0
offset_top = 232.0
offset_right = 235.0
offset_bottom = -680.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_1d2hy")
text = "M.S.P.G."
label_settings = ExtResource("2_y1hv0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="startbutton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -72.5
offset_right = 153.5
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_1d2hy")
theme_override_font_sizes/font_size = 140
text = "START"

[node name="waittimer" type="Timer" parent="startbutton"]
wait_time = 3.0
one_shot = true

[node name="waittime" type="Label" parent="."]
offset_left = 808.0
offset_top = 469.0
offset_right = 1115.0
offset_bottom = 634.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_1d2hy")
theme_override_font_sizes/font_size = 120
label_settings = ExtResource("2_y1hv0")
horizontal_alignment = 1

[node name="exitbutton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 316.0
offset_right = 55.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_1d2hy")
theme_override_font_sizes/font_size = 70
text = "EXIT"

[node name="scorelabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -140.0
offset_right = 147.0
grow_horizontal = 2
grow_vertical = 0
label_settings = ExtResource("2_y1hv0")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("2_1d2hy")
theme_override_font_sizes/font_size = 60
rounded = true

[node name="highscore" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 68.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_1d2hy")
label_settings = ExtResource("4_dbj5u")

[node name="stuffcounter" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -12.0
offset_bottom = 68.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_1d2hy")
label_settings = ExtResource("4_dbj5u")

[node name="MenuButton" type="MenuButton" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = 672.0
offset_right = 134.0
offset_bottom = -336.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1d2hy")
theme_override_font_sizes/font_size = 80
text = "How to play"
flat = false

[node name="HTP" type="Label" parent="."]
visible = false
offset_left = 826.0
offset_top = 262.0
offset_right = 1094.0
offset_bottom = 792.0
theme_override_styles/normal = SubResource("StyleBoxFlat_6rmpb")
text = "This is a simple game: you control a ship with your mouse/fingers and must avoid enemy ships, while also collecting \"Stuff\". The more \"Stuff\" you get and the more enemy ships you dodge, the higher your score will be!"
label_settings = ExtResource("4_dbj5u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="HTP"]
layout_mode = 0
offset_left = 224.0
offset_top = -44.0
offset_right = 272.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("2_1d2hy")
theme_override_font_sizes/font_size = 60
action_mode = 0
icon = ExtResource("5_08orx")
flat = true
icon_alignment = 1

[connection signal="count_start" from="." to="." method="_on_count_start"]
[connection signal="pressed" from="startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="timeout" from="startbutton/waittimer" to="." method="_on_waittimer_timeout"]
[connection signal="pressed" from="exitbutton" to="." method="_on_exitbutton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="HTP/Button" to="." method="_on_button_pressed"]
